--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Simple Javascript Hangman game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1 class="text-center mt-sm-2 mt-md-4">Juego del ahorcado</h1>
+            <h1 id="title" class="text-center mt-sm-2 mt-md-4">Juego del ahorcado</h1>
         </header>
         <div class="row d-flex justify-content-center">
             <div class="col-sm-12 col-md-8 col-lg-5">
@@ -57,6 +61,9 @@
             <button class="btn btn-success px-4" id="newGameBtn">¡Nuevo juego!</button>
         </div>
     </div>
+        <div class="container-fluid mt-4 bg-light d-flex justify-content-center p-2">
+            <p class="h4">José Bordón</p>
+        </div>
 <script src="hangman.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
