--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
             <button class="btn btn-success px-4" id="newGameBtn">¡Nuevo juego!</button>
         </div>
     </div>
-        <div class="container-fluid mt-4 bg-light d-flex justify-content-center p-2">
-            <p class="h4">José Bordón</p>
+        <div class="container-fluid mt-5 bg-light p-2 text-center">
+            <p class="h4 text-center">José Bordón</p>
+            <a class="text-center" id="github" href="https://github.com/josebordon94">Find me in Github!</a>
         </div>
 <script src="hangman.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
